--- a/styles/sass/components/home/_index.scss
+++ b/styles/sass/components/home/_index.scss
@@ -288,6 +288,12 @@
 
 // responsive for PC
 @include responsive_768 {
+  .magrin-top-50px {
+    margin-top: 42vw !important;
+  }
+  .magrin-top-60px {
+    margin-top: 42vw !important;
+  }
   .home {
     &-block1 {
       width: 100%;
@@ -328,7 +334,7 @@
       }
     }
     &-block2 {
-      margin-top: 36vw;
+      margin-top: 32vw;
       &-title {
         text-align: center;
         font-size: 18px;
@@ -583,6 +589,12 @@
 }
 
 @include responsive_992 {
+  .magrin-top-50px {
+    margin-top: 46vw !important;
+  }
+  .magrin-top-60px {
+    margin-top: 45vw !important;
+  }
   .home {
     &-block1 {
       width: 100%;
@@ -623,7 +635,7 @@
       }
     }
     &-block2 {
-      margin-top: 40vw;
+      margin-top: 36vw;
       &-title {
         text-align: center;
         font-size: 18px;
@@ -878,6 +890,12 @@
 }
 
 @include responsive_1024 {
+  .magrin-top-50px {
+    margin-top: 46vw !important;
+  }
+  .magrin-top-60px {
+    margin-top: 45vw !important;
+  }
   .home {
     &-block1 {
       width: 100%;
@@ -918,7 +936,7 @@
       }
     }
     &-block2 {
-      margin-top: 40vw;
+      margin-top: 38vw;
       &-title {
         text-align: center;
         font-size: 18px;
@@ -1173,6 +1191,12 @@
 }
 
 @include responsive_1200 {
+  .magrin-top-50px {
+    margin-top: 46vw !important;
+  }
+  .magrin-top-60px {
+    margin-top: 45vw !important;
+  }
   .home {
     &-block1 {
       width: 100%;
@@ -1212,7 +1236,7 @@
       }
     }
     &-block2 {
-      margin-top: 42vw;
+      margin-top: 38vw;
       &-title {
         text-align: center;
         font-size: 20px;
@@ -1463,6 +1487,12 @@
   }
 }
 @include responsive_1440 {
+  .magrin-top-50px {
+    margin-top: 47vw !important;
+  }
+  .magrin-top-60px {
+    margin-top: 46vw !important;
+  }
   .home {
     &-block1 {
       width: 100%;
@@ -1502,7 +1532,7 @@
       }
     }
     &-block2 {
-      margin-top: 42vw;
+      margin-top: 40vw;
       &-title {
         text-align: center;
         font-size: 20px;
@@ -1751,6 +1781,12 @@
   }
 }
 @include responsive_1650 {
+  .magrin-top-50px {
+    margin-top: 47vw !important;
+  }
+  .magrin-top-60px {
+    margin-top: 46vw !important;
+  }
   .home {
     &-block1 {
       width: 100%;
@@ -1790,7 +1826,7 @@
       }
     }
     &-block2 {
-      margin-top: 42vw;
+      margin-top: 41vw;
       &-title {
         text-align: center;
         font-size: 20px;
@@ -2038,6 +2074,12 @@
   }
 }
 @include responsive_1900 {
+  .magrin-top-50px {
+    margin-top: 47vw !important;
+  }
+  .magrin-top-60px {
+    margin-top: 46vw !important;
+  }
   .home {
     &-block1 {
       width: 100%;
